# fastpy

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  PLAN.md  README.md  alembic.ini  cli.py  laravel-principles.md  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.github/workflows/: docs.yml
alembic/: env.py
alembic/versions/: 51a41eb720a5_initial_migration.py
app/cli/: __init__.py  deploy.py  setup.py
app/config/: settings.py
app/controllers/: auth_controller.py  user_controller.py
app/database/: connection.py
app/enums/: __init__.py
app/middleware/: rate_limit.py  request_id.py  security_headers.py  session_context.py  timing.py
app/models/: base.py  user.py
app/models/concerns/: __init__.py  guards_attributes.py  has_attributes.py  has_casts.py  has_events.py  has_scopes.py
app/models/examples/: __init__.py  post.py
app/repositories/: __init__.py  base.py  user_repository.py
app/requests/: __init__.py
app/requests/auth/: __init__.py  login_request.py  register_request.py
app/requests/user/: __init__.py  create_user_request.py  update_user_request.py
app/routes/: auth_routes.py  health_routes.py  user_routes.py
app/seeders/: __init__.py  user_seeder.py
app/services/: __init__.py  base.py  user_service.py
app/utils/: auth.py  binding.py  exceptions.py  logger.py  login_security.py  pagination.py  responses.py  token_store.py
app/validation/: __init__.py  dependency.py  form_request.py  rules.py  validators.py
docs/: astro.config.mjs  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/.temp/: @localSearchIndexroot.D7s9l0qm.js  VPLocalSearchBox.CEjNwk9O.js  api_authentication.md.js  api_exceptions.md.js  api_pagination.md.js  api_responses.md.js  app.js  architecture_middleware.md.js  architecture_patterns.md.js  architecture_structure.md.js  commands_ai.md.js  commands_database.md.js  commands_make.md.js  commands_overview.md.js  commands_server.md.js  deployment_docker.md.js  deployment_production.md.js  examples_api-service.md.js  examples_blog.md.js  examples_ecommerce.md.js  fields_advanced.md.js  fields_basic.md.js  fields_overview.md.js  fields_validation.md.js  guide_configuration.md.js  guide_installation.md.js  guide_introduction.md.js  guide_quickstart.md.js  index.md.js  testing_factories.md.js  testing_fixtures.md.js  testing_setup.md.js
docs/.vitepress/.temp/assets/: style.VnLIcwfg.css
docs/.vitepress/theme/: custom.css
docs/api/: authentication.md  exceptions.md  pagination.md  responses.md  swagger.md
docs/architecture/: binding.md  middleware.md  models.md  patterns.md  structure.md
docs/assets/: .gitkeep
docs/commands/: ai.md  database.md  make.md  overview.md  server.md  setup.md
docs/deployment/: docker.md  production.md
docs/examples/: api-service.md  blog.md  ecommerce.md
docs/fields/: advanced.md  basic.md  overview.md  validation.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: configuration.md  getting-started.md  installation.md  introduction.md  quickstart.md  tutorial.md
docs/libs/: cache.md  encryption.md  events.md  hashing.md  http.md  mail.md  notifications.md  overview.md  queue.md  storage.md
docs/public/: CNAME
docs/src/content/docs/: index.mdx
docs/src/content/docs/api/: authentication.md  exceptions.md  pagination.md  responses.md
docs/src/content/docs/architecture/: middleware.md  (+2 more)
docs/src/styles/: custom.css
docs/stylesheets/: extra.css
docs/testing/: factories.md  fixtures.md  setup.md
tests/: __init__.py  conftest.py  factories.py  test_auth.py  test_health.py  test_root.py  test_soft_delete.py  test_users.py
(+21 files in other folders)
